renamed select_game to game_menu

--- a/code/Study buddy/select_study_time.html
+++ b/code/Study buddy/select_study_time.html
@@ -155,7 +155,7 @@
 
     // modal buttons
     goMini.addEventListener("click", () => {
-      window.location.href = "select_game.html"; // go to game page
+      window.location.href = "game_menu.html"; // go to game page
     });
 
     stayHere.addEventListener("click", () => {
